--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "begin-app",
+  "name": "For Friendship",
   "version": "0.0.0",
-  "description": "Basic Begin personal website",
+  "description": "荣耀战魂英雄装备展示",
   "scripts": {
     "start": "cross-env NODE_ENV=testing npx sandbox"
   },
