--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
-    "cross-env": "^6.0.3"
+    "cross-env": "^6.0.3",
+    "mongodb": "^3.3.3"
   }
 }
