--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
-    "cross-env": "^6.0.3",
+    "cross-env": "^6.0.3"
+  },
+  "dependencies": {
     "mongodb": "^3.3.3"
   }
 }
